--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
 		"@types/react": "^16.3.17",
 		"@types/react-dom": "^16.0.4",
 		"buffer": "^5.1.0",
+		"d3-array": "^1.2.1",
+		"d3-geo": "^1.10.0",
+		"d3-selection": "^1.3.0",
 		"fuse.js": "^3.2.1",
 		"immutable": "^3.8.2",
 		"multihashes": "^0.4.13",
 		"multihashing": "^0.3.2",
+		"niceware": "^1.0.5",
 		"npm": "^6.1.0",
 		"react": "^16.3.1",
 		"react-dom": "^16.3.1",
+		"topojson": "^3.0.2",
+		"us-atlas": "^1.0.2",
 		"uuid": "^3.2.1"
 	},
 	"devDependencies": {
