added assertion log viewer

--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 		"fuse.js": "^3.2.1",
 		"immutable": "^3.8.2",
 		"ipfs": "^0.31.4",
+		"jsonld": "^1.0.2",
 		"multihashes": "^0.4.14",
 		"multihashing": "^0.3.2",
 		"niceware": "^1.0.5",
 		"papaparse": "^4.6.0",
 		"react": "^16.4.2",
 		"react-dom": "^16.4.2",
+		"react-json-view": "^1.19.1",
 		"topojson": "^3.0.2",
 		"us-atlas": "^1.0.2",
 		"uuid": "^3.3.2"
