--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
 		"@types/react": "^16.4.9",
 		"@types/react-dom": "^16.0.7",
 		"buffer": "^5.2.0",
+		"cids": "^0.5.5",
+		"cytoscape": "^3.2.17",
+		"cytoscape-cose-bilkent": "^4.0.0",
+		"cytoscape-dagre": "^2.2.2",
 		"d3-array": "^1.2.1",
 		"d3-geo": "^1.10.0",
 		"d3-selection": "^1.3.0",
 		"fuse.js": "^3.2.1",
 		"immutable": "^3.8.2",
-		"ipfs": "^0.31.4",
-		"jsonld": "^1.0.2",
+		"ipfs": "^0.31.7",
+		"jsonld": "^1.1.0",
 		"multihashes": "^0.4.14",
 		"multihashing": "^0.3.2",
 		"niceware": "^1.0.5",
@@ -38,7 +42,7 @@
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-2": "^6.24.1",
 		"source-map-loader": "^0.2.3",
-		"ts-loader": "^4.4.2",
+		"ts-loader": "^4.5.0",
 		"typescript": "^2.9.2",
 		"webpack": "^4.16.5",
 		"webpack-cli": "^2.0.14"
