--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
 		"cytoscape": "^3.2.17",
 		"cytoscape-cose-bilkent": "^4.0.0",
 		"cytoscape-dagre": "^2.2.2",
-		"d3-array": "^1.2.1",
-		"d3-geo": "^1.10.0",
-		"d3-selection": "^1.3.0",
 		"fuse.js": "^3.2.1",
 		"immutable": "^3.8.2",
 		"ipfs": "^0.31.7",
 		"jsonld": "^1.1.0",
+		"libp2p-kad-dht": "^0.10.5",
 		"multihashes": "^0.4.14",
 		"multihashing": "^0.3.2",
 		"niceware": "^1.0.5",
@@ -29,10 +27,7 @@
 		"react": "^16.4.2",
 		"react-dom": "^16.4.2",
 		"react-json-view": "^1.19.1",
-		"topojson": "^3.0.2",
-		"us-atlas": "^1.0.2",
-		"uuid": "^3.3.2",
-		"viz.js": "^2.0.0"
+		"us-atlas": "^1.0.2"
 	},
 	"devDependencies": {
 		"babel-core": "^6.26.0",
