--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
 		"module": "es6",
 		"target": "es2015",
 		"jsx": "react",
-		"lib": ["dom", "es2017"]
+		"lib": ["dom", "es2017"],
+		"resolveJsonModule": true
 	},
 	"include": ["./src/**/*"]
 }
